--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/packages/software/fuyun/201906/bin/python"
+    "docker.defaultRegistryPath": "registry.cn-hangzhou.aliyuncs.com/fusionyun"
 }
