--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "docker.defaultRegistryPath": "registry.cn-hangzhou.aliyuncs.com/fusionyun"
+    "docker.defaultRegistryPath": "registry.cn-hangzhou.aliyuncs.com/fusionyun",
+    "python.pythonPath": "/usr/bin/python3"
 }
