--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "docker.defaultRegistryPath": "registry.cn-hangzhou.aliyuncs.com/fusionyun",
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/opt/conda/bin/python",
+    "python.testing.promptToConfigure": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false
 }
