--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "docker.defaultRegistryPath": "registry.cn-hangzhou.aliyuncs.com/fusionyun",
-    "python.pythonPath": "/usr/bin/python3.6",
+    "python.pythonPath": "/usr/bin/python",
     "python.testing.promptToConfigure": false,
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": false,
