--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "cmake.configureOnOpen": false
 }
