--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.formatting.provider": "autopep8",
+    "python.formatting.provider": "black",
     "cmake.configureOnOpen": false
 }
