--- a/dockerfiles/centos/8/Dockerfile
+++ b/dockerfiles/centos/8/Dockerfile
@@ -1,9 +1,5 @@
 FROM centos:8
 
-ARG FY_USER="fuyun"
-ARG FY_UID="1000"
-ARG FY_GID="100"
-
 RUN echo "exclude=*.i386 *.i686" >> /etc/yum.conf  \
     && yum install -y dnf-plugins-core  \    
     && sed -e 's|^mirrorlist=|#mirrorlist=|g' \
@@ -19,8 +15,34 @@ RUN echo "exclude=*.i386 *.i686" >> /etc/yum.conf  \
     && yum clean all -y -q
 
 
-RUN useradd -u ${FY_UID}  -d /home/${FY_USER}  ${FY_USER}  \
-    && echo "%${FY_USER} ALL=(ALL)    NOPASSWD: ALL" >>/etc/sudoers
+#######################################################
+
+ARG FY_LOCAL_GID=${FY_LOCAL_GID:-504}
+ARG FY_LOCAL_GROUP=${FY_LOCAL_GROUP:-develop}
+
+ARG FY_USER=${FY_USER:-fuyun}
+ARG FY_GROUP=${FY_GROUP:-${FY_USER}}
+ARG FY_UID=${FY_UID:-1000}
+ARG FY_GID=${FY_GID:-1000}
+ARG FY_HOME=${FY_HOME:-/home/${FY_USER}} 
+ARG FY_PREFIX=${FY_PREFIX:-/fuyun}
+
+
+RUN \
+    && echo "${FY_USER} ALL=(ALL)   NOPASSWD: ALL" >>/etc/sudoers \
+    && groupadd -g "${FY_LOCAL_GID}" "${FY_LOCAL_GROUP}"  \
+    && groupadd -g "${FY_GID}"       "${FY_GROUP}" \
+    && useradd  -l -m -s /bin/bash -N -u "${FY_UID}" -g "${FY_GID}" --groups "${FY_LOCAL_GROUP}" -d "${FY_HOME}" "${FY_USER}"  \
+    && mkdir -p ${FY_ROOT} -m 775 \
+    && chown ${FY_USER}:${FY_GROUP} ${FY_PREFIX}
+
+
+
+#######################################################
+
+ENV FY_ROOT ${FY_PREFIX}
+ENV FY_SCRIPTS ${FY_PREFIX}/software/scripts
 
 USER ${FY_USER}
 
+RUN echo "source ${FY_SCRIPTS}/fy_profile.sh" >> ${FY_HOME}/.bashrc
