[refactor] fuyun.dockerfile

--- a/dockerfiles/centos/7/Dockerfile
+++ b/dockerfiles/centos/7/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_OS=${BASE_OS:-centos:7.6}
-FROM ${BASE_OS}
+ARG BASE_OS_VERSION=${BASE_OS_VERSION:-7.6.1810}
+FROM centos:${BASE_OS_VERSION}
 
 LABEL Author="Salmon <yuzhi@ipp.ac.cn>"
 
@@ -11,16 +11,17 @@ RUN echo "exclude=*.i386 *.i686" >> /etc/yum.conf  \
     && yum install -y  epel-release \
     && yum update -y  \
     && yum groupinstall -y "Development Tools" \
-    && yum install -y sudo wget openssh openssh-server  \
+    && yum install -y sudo wget unzip \
     perl tcl tcl-devel python3 python3-pip \
-    lua-devel lua-posix lua-filesystem \
-    openssl11 openssl11-devel libibverbs-devel bzip2-devel libffi-devel \
-    vim unzip 
+    openssl11 openssl11-devel libibverbs-devel   
+     
 
-#######################################################
+# Clean up
+RUN yum clean all -y -q   
+
 # Update pip
 RUN pip3 install -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com --default-timeout=100 --no-cache-dir --upgrade pip 
 
 #######################################################
-# Clean up
-RUN yum clean all -y -q   
+# Build:
+# docker build  --build-arg BASE_OS_VERSION=7.6.1810  -t centos:7.6-fuyun-bare  .
