--- a/dockerfiles/ubuntu/jammy/Dockerfile
+++ b/dockerfiles/ubuntu/jammy/Dockerfile
@@ -12,39 +12,37 @@ RUN sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list \
     build-essential libssl-dev libibverbs-dev tcl-dev python3 python3-pip python-is-python3 \
     lua5.3 liblua5.3-dev  lua-posix lua-posix-dev \
     unzip curl git file openssh-client rsync   \
-    wget ca-certificates  sudo  locales vim \
+    wget ca-certificates  sudo  locales vim bc \
     && apt-get clean && rm -rf /var/lib/apt/lists/*  \
     && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen  \
     && locale-gen
 
 
-#######################################################
+# #######################################################
+# # Setup  FuYun
 
-ARG FY_LOCAL_GID=${FY_LOCAL_GID:-504}
-ARG FY_LOCAL_GROUP=${FY_LOCAL_GROUP:-develop}
+# ARG FY_ROOT=${FY_ROOT:-/opt/fuyun}
+# ARG FY_USER=${FY_USER:-fuyun}
+# ARG FY_GROUP=${FY_GROUP:-fuyun}
+# ARG FY_UID=${FY_UID:-1000}
+# ARG FY_GID=${FY_UID:-1000}
+# ARG FY_HOME_PREFIX=${FY_HOME_PREFIX:-/home}
 
-ARG FY_USER=${FY_USER:-fuyun}
-ARG FY_GROUP=${FY_GROUP:-fuyun}
-ARG FY_UID=${FY_UID:-1100}
-ARG FY_GID=${FY_GID:-1100}
-ARG FY_HOME=${FY_HOME:-/home/fuyun}
+# RUN echo "auth requisite pam_deny.so" >> /etc/pam.d/su \
+#     && sed -i.bak -e 's/^%admin/#%admin/' /etc/sudoers  \
+#     && sed -i.bak -e 's/^%sudo/#%sudo/' /etc/sudoers  \
+#     && mkdir -p ${FY_HOME_PREFIX} \
+#     && groupadd -g "${FY_GID}" "${FY_GROUP}"  \
+#     && useradd -l -m -s /bin/bash -N -u "${FY_UID}" -g "${FY_GID}" --groups "${FY_GROUP}" -d "${FY_HOME_PREFIX}/${FY_USER}"  "${FY_USER}"   \
+#     && echo "${FY_USER} ALL=(ALL)   NOPASSWD: ALL" >>/etc/sudoers \
+#     && mkdir -p ${FY_ROOT} -m 775 \
+#     && chown ${FY_USER}:${FY_GROUP} ${FY_ROOT}  
 
-ENV FY_ROOT ${FY_ROOT:-/fuyun}
+# VOLUME ${FY_ROOT}
 
-RUN echo "auth requisite pam_deny.so" >> /etc/pam.d/su \
-    && sed -i.bak -e 's/^%admin/#%admin/' /etc/sudoers  \
-    && sed -i.bak -e 's/^%sudo/#%sudo/' /etc/sudoers  \
-    && echo "${FY_USER} ALL=(ALL)    NOPASSWD: ALL" >>/etc/sudoers  \
-    && groupadd -g ${FY_LOCAL_GID} ${FY_LOCAL_GROUP} \
-    && groupadd -g "${FY_GID}" "${FY_GROUP}"  \
-    && useradd -l -m -s /bin/bash -N -u "${FY_UID}" -g "${FY_GID}" --groups "${FY_LOCAL_GROUP}" -d "${FY_HOME}"  "${FY_USER}"  \
-    && mkdir -p ${FY_ROOT} -m 775 \
-    && chown ${FY_USER}:${FY_GROUP} ${FY_ROOT}  
-
-#######################################################
-USER ${FY_USER} 
-
-ENV EASYBUILD_PREFIX=${FY_ROOT}
+# ENV FY_ROOT=${FY_ROOT} \
+#     FY_USER=${FY_USER}
+    
 # ln -s ${FY_ROOT}/software/lmod/lmod/init/bash /etc/profile.d/100-lmod.sh 
 
 # RUN TMP_BUILD=$(mktemp -d -t tmp_build_lmod_XXXXXXX)  \
